--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Joey Thinkful : Software Engineer</title>
+	<title>Andres Baker : Software Engineer</title>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" type="text/css" />
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
@@ -12,11 +12,13 @@
 <body>
 
 	<header>
-		<h1>Name</h1>
+		<h1>Andres Baker</h1>
 		<nav>
 			<ul id="menu">
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Contact</a></li>
+				<li><a href="Home">Home</a></li>
+				<li><a href="About">About</a></li>
+				<li><a href="Portafolio">Portafolio</a></li>
+				<li><a href="Contact">Contact</a></li>
 			</ul>
 		</nav>
 	</header>
